# solarsim

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_app.bat  build_app.sh  pyproject.toml  solar_system_simulation_3D.py  solarsim.spec
.github/workflows/: ci.yml  release.yml
src/solarsim/: __init__.py  __main__.py  body.py  constants.py  ephemeris.py  physics_numba.py  simulation.py
src/solarsim/gui/: __init__.py  app.py
tests/: test_simulation.py
